# vscode-documentdb

./: .eslintignore  .gitignore  .gitmodules  .prettierignore  .swcrc  .vscodeignore  ACCESSIBILITY_IMPROVEMENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEMO_MCP.sh  EXPERIMENTAL_AI_OVERLAY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  MIGRATION-SUMMARY.md  NOTICE.html  README.md  TESTING_FRAMEWORK_SUMMARY.md  eslint.config.mjs  extension.bundle.ts  index.md  index_advisor_data.py  jest.config.js  main.ts  package-lock.json  package.json  package.nls.json  playground-language-configuration.json  progress.md  temp-list-of-changes.md  test-query-parser.md  tsconfig.json  webpack.config.ext.js  webpack.config.views.js  work-summary.md
.azure-pipelines/: .npmrc  1esmain.yml  build-npm-packages.yml  build.yml  dummy-npm-build.yml  dummy-npm-release.yml  main.yml  release-npm-packages.yml  release-npm-packages.yml.real  release.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md
ai-and-plans/: 10-cross-feature-links.md  query-insights-implementation-notes.md
api/: README.md  api-extractor.json  package-lock.json  package.json  tsconfig.json
docs/: AI_TESTING_ARCHITECTURE.md  AI_TESTING_FRAMEWORK.md  MCP_INTEGRATION.md  MCP_SUPPORT.md  THEME_CUSTOMIZATION.md  index.md  (+8 more)
documentdb-mcp/legacy/: Dockerfile  MVP_SET_UP.md  index_advisor_data.py  pyproject.toml  query_generation_data.py
documentdb-mcp/legacy/src/documentdb_mcp/: app.py  models.py
documentdb-mcp/legacy/src/documentdb_mcp/tools/: collection.py  database.py  workflow.py
(+1546 files in other folders)
