[project]
name = "documentdb-mcp"
version = "0.1.0"
description = "A DocumentDB MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.9.3",
    "pymongo>=4.12.0",
    "uvicorn>=0.34.3",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "isort",
  "mypy"
]
